# yamllm

./: .gitignore  ACTIONABLE_IMPROVEMENTS.md  AGENTS.md  ARCHITECTURE_REFACTORING.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_REVIEW.md  GEMINI.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFESTO_STATUS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REVIEW_COMPLETE.md  REVIEW_SUMMARY.md  claude_review.md  codex_updates.md  conversation_history.db  conversations.db  demo_security_foundation.py  direct_validation.py  gemini_review.md  improvement_plan.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  validate_azure_providers.py  yamllm_manifesto.md
.config_examples/: README.md  advanced_config_openai_withmemory.yaml  anthropic_config.yaml  anthropic_minimal.yaml  basic_config_openai.yaml  deepseek_config.yaml  full_stack_cli.yaml  google_config.yaml  google_minimal.yaml  mcp_config.yaml  mistral_config.yaml  openai_minimal.yaml  with_tools.yaml
.config_examples/anthropic/: anthropic_config.yaml
.config_examples/azure_foundry/: azure_foundry_config.yaml
.config_examples/azure_openai/: azure_openai_config.yaml
.config_examples/deepseek/: deepseek_config.yaml
.config_examples/google/: google_config.yaml
.config_examples/mcp/: mcp_config.yaml
.config_examples/mistral/: mistral_config.yaml
.config_examples/openai/: basic_config_openai.yaml
.config_examples/openrouter/: openrouter_config.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-publish.yml
docs/: AGENTIC_ARCHITECTURE.md  CLI_REFERENCE.md  Gemfile  P2_FEATURES_GUIDE.md  PERFORMANCE.md  _config.yml  api.html  architecture.md  azure.md  azure_guide.md  configuration.html  configuration.md  examples.md  genindex.html  index.html  index.md  installation.html  installation.md  mcp.md  objects.inv  plan.md  providers.md  requirements.md  search.html  searchindex.js  tools.md  usage.html
docs/_modules/: index.html
docs/_site/: configuration.md  contributing.md  examples.md  index.md  installation.md
docs/_sources/: configuration.md.txt  (+3 more)
examples/: README.md  anthropic_example.py  anthropic_example_traditional.py  azure_foundry_config.yaml  azure_openai_config.yaml  basic.py  cli_showcase.py  config_management_demo.py  deepseek_example.py  enhanced_chat_demo.py  example.py  full_cli_chat.py  getting_started_demo.py  google_example.py  mcp_example.py  metrics_example.py  mistral_example.py  modern_yamllm_usage.py  openai_example.py  p2_examples.py  simple_ui_demo.py  tool_test.py  vector_store.py  view_messages.py
memory/: streaming_conversations.db
tests/: conftest.py  mock_config.yaml  test_advanced_git.py  test_agent_core.py  test_agent_models.py  test_agent_workflow.py  test_anthropic_minimal.py  test_anthropic_provider.py  test_azure_foundry_provider.py  test_azure_openai_provider.py  test_config.py  test_config_validation.py  test_conversation_store.py  test_cost_tracker.py  test_database_performance.py  test_dynamic_tool_creator.py  test_ensemble.py  test_error_handling.py  test_foundation_security.py  test_interactive_steering.py  test_learning_system.py  test_llm.py  test_mcp.py.disabled  test_mcp_async.py  test_mcp_edge_cases.py  test_model_router.py  test_multi_agent.py  test_openai_tool_formatting.py  test_parser.py  test_provider_capabilities.py  test_security.py  test_security_features.py  test_session_recording.py  test_simple.py  test_streaming_callback.py  test_thinking_mode.py  test_thread_safety.py  test_tool_filtering.py  test_tool_formatting.py  test_tool_manager.py  (+4 more)
yamllm/: __init__.py  cli.py  cli_old.py.bak  llm.py
(+220 files in other folders)
