[metadata]
name = yamllm
version = 0.1.0
description = A Python package for easily setting up LLMs using YAML configuration files.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/yamllm
license = MIT

[options]
packages = find:
install_requires =
    pyyaml
    requests

[options.packages.find]
where = src